# Logger

./: .gitignore  CMakeLists.txt  README.md
cmake/: logger-config.cmake
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/Logger/: Logger.hpp
tests/: CMakeLists.txt  LoggerTests.cpp
